--- a/templates/dashboard/pupuk.html
+++ b/templates/dashboard/pupuk.html
@@ -20,6 +20,7 @@
                     <tr>
                       <th>No </th>
                       <th> Nama Toko </th>
+                      <th> Kalamat </th>
                       <th> Kontak Info </th>
                       <th> Latitude </th>
                       <th> Longitude </th>
@@ -31,6 +32,7 @@
                     <tr>
                         <td style="text-align:center" width="5%"> {{ forloop.counter }}</td>
                         <td>{{ row.nama_toko }}</td>
+                        <td>{{ row.alamat }}</td>
                         <td>{{ row.no_tlp}}</td>
                         <td>{{ row.Latitude }}</td>
                         <td>{{ row.Longitude }}</td>
