perbaiki corausel nya

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -156,8 +156,8 @@
                             class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="50"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Bu Endah</h5>
-                            <p class="fw-normal text-black">Kepala Bidang</p>
+                            <h5 class="mb-0 fw-bold text-success">Drs. Muhammad Djudul, M.Si</h5>
+                            <p class="fw-normal text-black"></p>
                           </div>
                         </div>
                         <!-- Text Nya -->
