--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -87,16 +87,17 @@
                   <div class="col-md-4 mb-5 mb-md-0">
                     <div class="card h-100 shadow">
                       <div class="card-body my-1">
-                        <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="50"
+                        <div class="align-items-center d-block d-xl-flex px-3"><img
+                            class="img-fluid me-3 me-md-2 me-lg-3 align-center" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Bu Endah</h5>
-                            <p class="fw-normal text-black">Kepala Bidang</p>
+                            <h5 class="mb-0 fw-bold text-success">Drs, Muhammad Djudul,M.Si</h5>
+                            <p class="fw-normal text-black">Kepala Dinas</p>
+
                           </div>
                         </div>
                         <!-- Text Nya -->
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3"> </p>
+                        
                       </div>
                     </div>
                   </div>
@@ -104,15 +105,14 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-2.png' %}" width="50"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-2.png' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ilone Pickford</h5>
-                            <p class="fw-normal text-black">Head of Agrogofund </p>
+                            <h5 class="mb-0 fw-bold text-success">Ir. Hj. Kartini, MP</h5>
+                            <p class="fw-normal text-black">Sekretaris Dinas</p>
                           </div>
                         </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos
-                          ducimus qui blanditiis praesentium </p>
+                        
                       </div>
                     </div>
                   </div>
@@ -120,15 +120,14 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-3.png' %}" width="50"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-3.png' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
                             <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
                             <p class="fw-normal text-black">Herbalist</p>
                           </div>
                         </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos
-                          ducimus qui blanditiis praesentium </p>
+                        
                       </div>
                     </div>
                   </div>
