--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -94,7 +94,7 @@
         <div class="row flex-center py-5">
           <div class="col-12 col-sm-8 col-md-6 text-center text-md-start"> <a class="text-decoration-none" href="#"><img
                 class="d-inline-block align-top img-fluid" src="{% static 'asset/user/img/gallery/logoPertanian.png' %}" alt=""
-                width="30" /><span class="text-theme font-monospace fs-1 ps-1">Dinas Pertanian</span></a></div>
+                width="30" /><span class="text-theme font-monospace fs-1 ps-1">Dinas Tanaman Pangan</span></a></div>
           <div class="col-12 col-sm-8 col-md-6">
             <p class="fs--1 text-dark my-2 text-center text-md-end"> Versi Beta </p>
 
