--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -11,7 +11,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title> GIS Info PSP</title>
+  <title>GESINFO-PSP Sultra</title>
 
   <!-- ===============================================-->
   <!--    Favicons-->
@@ -47,7 +47,7 @@
       data-navbar-on-scroll="data-navbar-on-scroll">
       <div class="container"><a class="navbar-brand" href="{% url 'home' %}"><img class="d-inline-block align-top img-fluid"
             src="{% static 'asset/user/img/gallery/logoPertanian.png' %}" alt="" width="50" /><span
-            class="text-theme font-monospace fs-2 ps-3">GIS Info PSP</span></a><button class="navbar-toggler collapsed"
+            class="text-theme font-monospace fs-2 ps-3">GESINFO-PSP</span></a><button class="navbar-toggler collapsed"
           type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
@@ -55,8 +55,9 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item px-2"><a class="nav-link fw-medium active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
-            <li class="nav-item px-2"><a class="nav-link fw-medium" href="{% url 'user_lahan' %}">Peta Lahan</a></li>
-            <li class="nav-item px-2"><a class="nav-link fw-medium" href="{% url 'user_pupuk' %}">Toko Pupuk Terdekat</a></li>
+            <li class="nav-item px-2"><a class="nav-link fw-medium" href="{% url 'user_lahan' %}">Pemetaan Lahan Sawah</a></li>
+            <li class="nav-item px-2"><a class="nav-link fw-medium" href="{% url 'user_pupuk' %}">Lokasi Pupuk Terdekat</a></li>
+            <li class="nav-item px-2"><a class="nav-link fw-medium" href="{% url 'user_irigasi' %}"> Irigasi</a></li>
 
           </ul>
           <div class="d-flex">
