--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -5,9 +5,9 @@
 <div class="container">
         <div class="row align-items-center min-vh-75 min-vh-lg-100">
           <div class="col-md-7 col-lg-6 col-xxl-5 py-6 text-sm-start text-center">
-            <h1 class="mt-6 mb-sm-4 fw-semi-bold lh-sm fs-4 fs-lg-5 fs-xl-6">Pemetaan Lahan Sawah Berbasis Web <br
+            <h1 class="mt-6 mb-sm-4 fw-semi-bold lh-sm fs-4 fs-lg-5 fs-xl-6">Geospasial Sistem Informasi Sarana dan Pra Sarana Pertanian Sultra <br
                 class="d-block d-lg-block" /></h1>
-            <a class="btn btn-lg btn-success" href="#" role="button">Lihat Pemetaan</a>
+           
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 mx-auto text-center mb-3">
-            <h5 class="fw-bold fs-3 fs-lg-5 lh-sm mb-3"> Header</h5>
+            <h5 class="fw-bold fs-3 fs-lg-5 lh-sm mb-3"> Informasi </h5>
 
           </div>
         </div>
@@ -33,9 +33,8 @@
                       src="{% static 'asset/user/img/icons/farmer.svg' %}" height="60" alt="" />
                       
                     <div class="card-body">
-                      <h6 class="fw-bold fs-1 heading-color">Pendataan Menyeluruh</h6>
-                      <p class="mt-3 mb-md-0 mb-lg-2">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                        aut fugit, sed quia consequuntur magni dolores eos qui ratione</p>
+                      <h6 class="fw-bold fs-1 heading-color">Pemetaan Lahan Sawah</h6>
+                      <p class="mt-3 mb-md-0 mb-lg-2">Menyediakan Informasi Serta Visualisasi Lahan Sawah Yang Telah Terdata </p>
                     </div>
                   </div>
                 </div>
@@ -46,9 +45,8 @@
                       src="{% static 'asset/user/img/icons/farmer.svg' %}" height="60" alt="" />
                       
                     <div class="card-body">
-                      <h6 class="fw-bold fs-1 heading-color">Akses Bagi Seluruh Pemilik Sawah</h6>
-                      <p class="mt-3 mb-md-0 mb-lg-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                        accusantium doloremque laudantium, totam rem aperiam.</p>
+                      <h6 class="fw-bold fs-1 heading-color"> Informasi Toko Pupuk Yang Terdaftar </h6>
+                      <p class="mt-3 mb-md-0 mb-lg-2">Menyediakan Informasi Toko Pupuk Yang Telah Terdata </p>
                     </div>
                   </div>
                 </div>
@@ -58,9 +56,8 @@
                   <div class="text-center text-md-start card-hover"><img class="ps-3 icons"
                       src="{% static 'asset/user/img/icons/planting.svg' %}" height="60" alt="" />
                     <div class="card-body">
-                      <h6 class="fw-bold fs-1 heading-color"> Informasi Geografis Sawah </h6>
-                      <p class="mt-3 mb-md-0 mb-lg-2">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                        blanditiis praesentium voluptatum deleniti atque corrupti quos</p>
+                      <h6 class="fw-bold fs-1 heading-color"> Informasi Geografis Irigasi </h6>
+                      <p class="mt-3 mb-md-0 mb-lg-2">Menyediakan Informasi Saluran irigasi </p>
                     </div>
                   </div>
                 </div>
@@ -88,7 +85,9 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-1">
                         <div class="align-items-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3 align-center" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="100"
+                            class="img-fluid me-3 me-md-2 me-lg-3 align-center" src="{% static 'asset/user/img/gallery/JD1.png' %}" 
+                            width="100"
+                            height="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
                             <h5 class="mb-0 fw-bold text-success">Drs, Muhammad Djudul,M.Si</h5>
@@ -105,7 +104,7 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-2.png' %}" width="100"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/KT1.jpg' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
                             <h5 class="mb-0 fw-bold text-success">Ir. Hj. Kartini, MP</h5>
@@ -120,11 +119,11 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-3.png' %}" width="100"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/en1.jpg' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
-                            <p class="fw-normal text-black">Herbalist</p>
+                            <h5 class="mb-0 fw-bold text-success">Endah Susilowaty, S.TP.,MM</h5>
+                            <p class="fw-normal text-black">Kepala Bidang PSP</p>
                           </div>
                         </div>
                         
@@ -139,15 +138,13 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="50"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/mz1.jpg' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Fernando Soler</h5>
-                            <p class="fw-normal text-black">Telecommunication Engineer</p>
+                            <h5 class="mb-0 fw-bold text-success">Mizwar,S.TP</h5>
+                            <p class="fw-normal text-black">Kepala Seksi Lahan</p>
                           </div>
                         </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Quis autem vel eum iure reprehenderit qui in ea
-                          voluptate velit esse quam nihil molestiae</p>
                       </div>
                     </div>
                   </div>
@@ -155,15 +152,13 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-2.png' %}" width="50"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/ft2.jpg' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ilone Pickford</h5>
-                            <p class="fw-normal text-black">Head of Agrogofund Groups </p>
+                            <h5 class="mb-0 fw-bold text-success">Hj. Safitri, S.Pt., M.Pt.</h5>
+                            <p class="fw-normal text-black">Kepala Seksi Irigasi </p>
                           </div>
                         </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos
-                          ducimus qui blanditiis praesentium </p>
                       </div>
                     </div>
                   </div>
@@ -171,72 +166,19 @@
                     <div class="card h-100 shadow">
                       <div class="card-body my-3">
                         <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-3.png' %}" width="50"
+                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/Na1.jpg' %}" width="100"
                             alt="" />
                           <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
-                            <p class="fw-normal text-black">Herbalist</p>
+                            <h5 class="mb-0 fw-bold text-success">Wa Ode Naharia</h5>
+                            <p class="fw-normal text-black">Kepala Seksi Sarpem</p>
                           </div>
                         </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Ui dolorem eum fugiat quo voluptas nulla pariatur?
-                          At vero eos et accusamus et iusto odio</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="row h-100 mx-3 mx-sm-5 mx-md-4 my-md-7 m-lg-7 mt-7">
-                  <div class="col-md-4 mb-5 mb-md-0">
-                    <div class="card h-100 shadow">
-                      <div class="card-body my-3">
-                        <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-1.png' %}" width="50"
-                            alt="" />
-                          <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Fernando Soler</h5>
-                            <p class="fw-normal text-black">Telecommunication Engineer</p>
-                          </div>
-                        </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Quis autem vel eum iure reprehenderit qui in ea
-                          voluptate velit esse quam nihil molestiae</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4 mb-5 mb-md-0">
-                    <div class="card h-100 shadow">
-                      <div class="card-body my-3">
-                        <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-2.png' %}" width="50"
-                            alt="" />
-                          <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ilone Pickford</h5>
-                            <p class="fw-normal text-black">Head of Agrogofund Groups </p>
-                          </div>
-                        </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos
-                          ducimus qui blanditiis praesentium </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4 mb-5 mb-md-0">
-                    <div class="card h-100 shadow">
-                      <div class="card-body my-3">
-                        <div class="align-items-xl-center d-block d-xl-flex px-3"><img
-                            class="img-fluid me-3 me-md-2 me-lg-3" src="{% static 'asset/user/img/gallery/user-3.png' %}" width="50"
-                            alt="" />
-                          <div class="flex-1 align-items-center pt-2">
-                            <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
-                            <p class="fw-normal text-black">Herbalist</p>
-                          </div>
-                        </div>
-                        <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Ui dolorem eum fugiat quo voluptas nulla pariatur?
-                          At vero eos et accusamus et iusto odio</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              
             </div>
             <div class="row px-3 px-sm-6 px-md-0 px-lg-5 px-xl-4">
               <div class="col-12 position-relative"><a class="carousel-control-prev carousel-icon z-index-2"
