--- a/templates/dashboard/pupuk.html
+++ b/templates/dashboard/pupuk.html
@@ -20,7 +20,7 @@
                     <tr>
                       <th>No </th>
                       <th> Nama Toko </th>
-                      <th> Kalamat </th>
+                      <th> alamat </th>
                       <th> Kontak Info </th>
                       <th> Latitude </th>
                       <th> Longitude </th>
