--- a/templates/dashboard/show_lahan.html
+++ b/templates/dashboard/show_lahan.html
@@ -118,7 +118,7 @@
                       result.forEach(field => {
                         console.log(result.length);
                         kmz.add(field.nama_file);
-                        console.log(field.nama_file);
+                        // console.log(field);
                       });
                     }
                   });
