--- a/templates/dashboard/irigasi.html
+++ b/templates/dashboard/irigasi.html
@@ -3,7 +3,7 @@
                 <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item">Home</a></li>
                 <li class="breadcrumb-item "> Manage Data Pemetaan</li>
-                <li class="breadcrumb-item active">Lahan Sawah</li>
+                <li class="breadcrumb-item active">Data Irigasi</li>
                 </ol>
               {% endblock %}
     {% block body %}
