--- a/templates/dashboard/show_irigasi.html
+++ b/templates/dashboard/show_irigasi.html
@@ -4,7 +4,7 @@
     <ol class="breadcrumb float-sm-right">
       <li class="breadcrumb-item">Home</a></li>
       <li class="breadcrumb-item "> Data Pemetaan</li>
-      <li class="breadcrumb-item active">Lahan Sawah</li>
+      <li class="breadcrumb-item active">Irigasi</li>
     </ol>
     {% endblock %}
     {% block head %}
