--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -154,7 +154,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="{% url 'add_pupuk' %}" class="nav-link">
+                  <a href="{% url 'add_irigasi' %}" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p> Upload Data Irigasi</p>
                   </a>
